--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
     <title>ohmyfood</title>
 
-    <!-- Google fonts import : Roboto 300, 500 & 700 and Shrikhand -->
+    <!-- Google fonts import : Roboto 300, 400, 500 & 700 and Shrikhand -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
 
     <!-- Link to Font Awesome library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -22,8 +22,124 @@
 </head>
 
 <body>
-    <h1>ETAPE 1: Mise en place de l'environnement de développement</h1>
-    <p>Test réussi !</p>
+    <!-- Header -->
+    <header>
+        <h1 class="main-title">ohmyfood</h1>
+    </header>
+
+    <!-- Main -->
+    <main>
+        <!-- Section "location" -->
+        <div class="location">
+            <i class="fa-sm fa-solid fa-location-dot"></i>
+            <p class="location__text">Paris, Belleville</p>
+        </div>
+
+        <!-- Section "presentation" -->
+        <section class="presentation">
+            <h2 class="secondary-title secondary-title--presentation">Réservez le menu qui vous convient</h2>
+            <p class="presentation__text">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+            <a class="presentation__button" href="#restaurants">Explorez nos restaurants</a>
+        </section>
+
+        <!-- Section "functioning" -->
+        <section class="functioning">
+            <h2 class="secondary-title secondary-title--section">Fonctionnement</h2>
+            <div class="functioning__contener">
+                <div class="functioning__step">
+                    <p class="step-number">1</p>
+                    <i class="step-icon fa-lg fa-solid fa-mobile-screen-button"></i>
+                    <p>Choisissez un restaurant</p>
+                </div>
+                <div class="functioning__step">
+                    <p class="step-number">2</p>
+                    <i class="step-icon fa-lg fa-solid fa-list-ul"></i>
+                    <p>Composez votre menu</p>
+                </div>
+                <div class="functioning__step">
+                    <p class="step-number">3</p>
+                    <i class="step-icon step-icon--purple fa-lg fa-solid fa-store"></i>
+                    <p>Dégustez au restaurant</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Section "restaurants" -->
+        <section id="restaurants" class="restaurants">
+            <h2 class="secondary-title secondary-title--section">Restaurants</h2>
+            <div class="restaurants__contener">
+                <article class="restaurants__card">
+                    <a class="no-decoration" href="#">
+                        <p class="new-label">Nouveau</p>
+                        <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La palette du goût</h3>
+                                <p class="card-subtitle">Menilmontant</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-xl fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants__card">
+                    <a class="no-decoration" href="#">
+                        <p class="new-label">Nouveau</p>
+                        <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">La note enchantée</h3>
+                                <p class="card-subtitle">Charonne</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-xl fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants__card">
+                    <a class="no-decoration" href="#">
+                        <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">À la française</h3>
+                                <p class="card-subtitle">Cité Rouge</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-xl fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+                <article class="restaurants__card">
+                    <a class="no-decoration" href="#">
+                        <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-content">
+                            <div class="card-txt">
+                                <h3 class="card-title">Le délice des sens</h3>
+                                <p class="card-subtitle">Folie-Méricourt</p>
+                            </div>
+                            <div class="card-heart">
+                                <i class="fa-xl fa-regular fa-heart"></i>
+                            </div>
+                        </div>
+                    </a>
+                </article>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <h3 class="footer__logo">ohmyfood</h3>
+        <div class="footer__contener">
+            <div class="footer__icon-links"><i class="footer__icon fa-sm fa-solid fa-utensils"></i><p>Proposer un restaurant</p></div>
+            <div class="footer__icon-links"><i class="footer__icon fa-xs fa-solid fa-handshake-angle"></i><p>Devenir partenaire</p></div>
+            <p class="footer__links">Mentions légales</p>
+            <a class="footer__contact" href="mailto:ohmyfood@gmail.com"><p class="footer__links">Contact</p></a>
+        </div>
+    </footer>
     
 </body>
 
