--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
         <section id="restaurants" class="restaurants">
             <h2 class="secondary-title secondary-title--section">Restaurants</h2>
             <div class="restaurants__contener">
+
                 <article class="restaurants__card">
                     <a class="no-decoration" href="#">
-                        <p class="new-label">Nouveau</p>
-                        <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-img-contener">
+                            <p class="new-label">Nouveau</p>
+                            <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        </div>
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">La palette du goût</h3>
@@ -85,8 +88,10 @@
                 </article>
                 <article class="restaurants__card">
                     <a class="no-decoration" href="#">
-                        <p class="new-label">Nouveau</p>
-                        <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-img-contener">
+                            <p class="new-label">Nouveau</p>
+                            <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        </div>
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">La note enchantée</h3>
@@ -100,7 +105,9 @@
                 </article>
                 <article class="restaurants__card">
                     <a class="no-decoration" href="#">
-                        <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-img-contener">
+                            <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        </div>
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">À la française</h3>
@@ -114,7 +121,9 @@
                 </article>
                 <article class="restaurants__card">
                     <a class="no-decoration" href="#">
-                        <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        <div class="card-img-contener">
+                            <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
+                        </div>
                         <div class="card-content">
                             <div class="card-txt">
                                 <h3 class="card-title">Le délice des sens</h3>
