--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Google fonts import : Roboto 300, 400, 500 & 700 and Shrikhand -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&amp;family=Shrikhand&amp;display=swap" rel="stylesheet">
 
     <!-- Link to Font Awesome library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -22,9 +22,28 @@
 </head>
 
 <body>
+    <!-- Loader -->
+    <div class="loader-page">
+        <div class="loader-contener">
+            <div class="cutting-board"></div>
+            <div class="knife">
+                <div class="blade"></div>
+                <div class="handle"></div>
+            </div>
+            <div class="carrot">
+                <div class="cut cut-1"></div>
+                <div class="cut cut-2"></div>
+                <div class="cut cut-3"></div>
+            </div>
+            <div class="loading-bar">
+                <div class="progress"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Header -->
-    <header>
-        <h1 class="main-title">ohmyfood</h1>
+    <header class="header">
+        <img class="header__logo" src="assets/images/logo/ohmyfood.png" alt="Logo ohmyfood">
     </header>
 
     <!-- Main -->
@@ -37,14 +56,14 @@
 
         <!-- Section "presentation" -->
         <section class="presentation">
-            <h2 class="secondary-title secondary-title--presentation">Réservez le menu qui vous convient</h2>
+            <h1 class="title title--presentation">Réservez le menu qui vous convient</h1>
             <p class="presentation__text">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="presentation__button" href="#restaurants">Explorez nos restaurants</a>
+            <a class="presentation__button" href="#restaurants"><span class="button-text">Explorer nos restaurants</span></a>
         </section>
 
         <!-- Section "functioning" -->
         <section class="functioning">
-            <h2 class="secondary-title secondary-title--section">Fonctionnement</h2>
+            <h1 class="title title--section">Fonctionnement</h1>
             <div class="functioning__contener">
                 <div class="functioning__step">
                     <p class="step-number">1</p>
@@ -58,7 +77,7 @@
                 </div>
                 <div class="functioning__step">
                     <p class="step-number">3</p>
-                    <i class="step-icon step-icon--purple fa-lg fa-solid fa-store"></i>
+                    <i class="step-icon fa-lg fa-solid fa-store"></i>
                     <p>Dégustez au restaurant</p>
                 </div>
             </div>
@@ -66,7 +85,7 @@
 
         <!-- Section "restaurants" -->
         <section id="restaurants" class="restaurants">
-            <h2 class="secondary-title secondary-title--section">Restaurants</h2>
+            <h1 class="title title--section">Restaurants</h1>
             <div class="restaurants__contener">
 
                 <article class="restaurants__card">
@@ -77,11 +96,15 @@
                         </div>
                         <div class="card-content">
                             <div class="card-txt">
-                                <h3 class="card-title">La palette du goût</h3>
+                                <h2 class="card-title">La palette du goût</h2>
                                 <p class="card-subtitle">Menilmontant</p>
                             </div>
-                            <div class="card-heart">
-                                <i class="fa-xl fa-regular fa-heart"></i>
+                            <div class="heart-contener">
+                                <input class="check-heart" id="heart-1" type="checkbox">
+                                <label for="heart-1">
+                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -94,11 +117,15 @@
                         </div>
                         <div class="card-content">
                             <div class="card-txt">
-                                <h3 class="card-title">La note enchantée</h3>
+                                <h2 class="card-title">La note enchantée</h2>
                                 <p class="card-subtitle">Charonne</p>
                             </div>
-                            <div class="card-heart">
-                                <i class="fa-xl fa-regular fa-heart"></i>
+                            <div class="heart-contener">
+                                <input class="check-heart" id="heart-2" type="checkbox">
+                                <label for="heart-2">
+                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -110,11 +137,15 @@
                         </div>
                         <div class="card-content">
                             <div class="card-txt">
-                                <h3 class="card-title">À la française</h3>
+                                <h2 class="card-title">À la française</h2>
                                 <p class="card-subtitle">Cité Rouge</p>
                             </div>
-                            <div class="card-heart">
-                                <i class="fa-xl fa-regular fa-heart"></i>
+                            <div class="heart-contener">
+                                <input class="check-heart" id="heart-3" type="checkbox">
+                                <label for="heart-3">
+                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -126,11 +157,15 @@
                         </div>
                         <div class="card-content">
                             <div class="card-txt">
-                                <h3 class="card-title">Le délice des sens</h3>
+                                <h2 class="card-title">Le délice des sens</h2>
                                 <p class="card-subtitle">Folie-Méricourt</p>
                             </div>
-                            <div class="card-heart">
-                                <i class="fa-xl fa-regular fa-heart"></i>
+                            <div class="heart-contener">
+                                <input class="check-heart" id="heart-4" type="checkbox">
+                                <label for="heart-4">
+                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                </label>
                             </div>
                         </div>
                     </a>
@@ -141,12 +176,12 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <h3 class="footer__logo">ohmyfood</h3>
+        <h3 class="footer__title">ohmyfood</h3>
         <div class="footer__contener">
-            <div class="footer__icon-links"><i class="footer__icon fa-sm fa-solid fa-utensils"></i><p>Proposer un restaurant</p></div>
-            <div class="footer__icon-links"><i class="footer__icon fa-xs fa-solid fa-handshake-angle"></i><p>Devenir partenaire</p></div>
-            <p class="footer__links">Mentions légales</p>
-            <a class="footer__contact" href="mailto:ohmyfood@gmail.com"><p class="footer__links">Contact</p></a>
+            <div class="footer__contener__icon-links"><i class="footer__icon fa-sm fa-solid fa-utensils"></i><p>Proposer un restaurant</p></div>
+            <div class="footer__contener__icon-links"><i class="footer__icon fa-xs fa-solid fa-handshake-angle"></i><p>Devenir partenaire</p></div>
+            <p class="footer__contener__links">Mentions légales</p>
+            <a class="footer__contener__contact" href="mailto:ohmyfood@gmail.com">Contact</a>
         </div>
     </footer>
     
