--- a/index.html
+++ b/index.html
@@ -35,6 +35,29 @@
                 <div class="cut cut-2"></div>
                 <div class="cut cut-3"></div>
             </div>
+            <div class="plate">
+                <div class="meat-1"></div>
+                <div class="meat-2"></div>
+                <div class="vegetable"></div>
+                <div class="steam-1">
+                    <div class="steam-part-1"></div>
+                    <div class="steam-part-2"></div>
+                    <div class="steam-part-3"></div>
+                </div>
+                <div class="steam-2">
+                    <div class="steam-part-1"></div>
+                    <div class="steam-part-2"></div>
+                    <div class="steam-part-3"></div>
+                </div>
+                <div class="steam-3">
+                    <div class="steam-part-1"></div>
+                    <div class="steam-part-2"></div>
+                    <div class="steam-part-3"></div>
+                </div>
+            </div>
+            <div class="bell">
+                <div class="bell-wrist"></div>
+            </div>
             <div class="loading-bar">
                 <div class="progress"></div>
             </div>
@@ -63,113 +86,122 @@
 
         <!-- Section "functioning" -->
         <section class="functioning">
-            <h1 class="title title--section">Fonctionnement</h1>
-            <div class="functioning__contener">
-                <div class="functioning__step">
-                    <p class="step-number">1</p>
-                    <i class="step-icon fa-lg fa-solid fa-mobile-screen-button"></i>
-                    <p>Choisissez un restaurant</p>
-                </div>
-                <div class="functioning__step">
-                    <p class="step-number">2</p>
-                    <i class="step-icon fa-lg fa-solid fa-list-ul"></i>
-                    <p>Composez votre menu</p>
-                </div>
-                <div class="functioning__step">
-                    <p class="step-number">3</p>
-                    <i class="step-icon fa-lg fa-solid fa-store"></i>
-                    <p>Dégustez au restaurant</p>
+            <div class="functioning__margins">
+                <h1 class="title title--section">Fonctionnement</h1>
+                <div class="functioning__contener">
+                    <div class="functioning__step">
+                        <p class="step-number">1</p>
+                        <i class="step-icon fa-lg fa-solid fa-mobile-screen-button"></i>
+                        <p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="functioning__step">
+                        <p class="step-number">2</p>
+                        <i class="step-icon fa-lg fa-solid fa-list-ul"></i>
+                        <p>Composez votre menu</p>
+                    </div>
+                    <div class="functioning__step">
+                        <p class="step-number">3</p>
+                        <i class="step-icon fa-lg fa-solid fa-store"></i>
+                        <p>Dégustez au restaurant</p>
+                    </div>
                 </div>
             </div>
         </section>
 
         <!-- Section "restaurants" -->
         <section id="restaurants" class="restaurants">
-            <h1 class="title title--section">Restaurants</h1>
-            <div class="restaurants__contener">
+            <div class="restaurants__margins">
 
-                <article class="restaurants__card">
-                    <a class="no-decoration" href="#">
-                        <div class="card-img-contener">
-                            <p class="new-label">Nouveau</p>
-                            <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
-                        </div>
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h2 class="card-title">La palette du goût</h2>
-                                <p class="card-subtitle">Menilmontant</p>
+                <h1 class="title title--section">Restaurants</h1>
+                <div class="restaurants__contener">
+
+                    <article class="restaurants__card">
+                        <a class="no-decoration" href="#">
+                            <div class="card-img-contener">
+                                <p class="new-label">Nouveau</p>
+                                <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
-                            <div class="heart-contener">
-                                <input class="check-heart" id="heart-1" type="checkbox">
-                                <label for="heart-1">
-                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
-                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
-                                </label>
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h2 class="card-title">La palette du goût</h2>
+                                    <p class="card-subtitle">Menilmontant</p>
+                                </div>
+                                <div class="heart-contener">
+                                    <input class="check-heart" id="heart-1" type="checkbox">
+                                    <label for="heart-1">
+                                        <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                        <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="restaurants__card">
-                    <a class="no-decoration" href="#">
-                        <div class="card-img-contener">
-                            <p class="new-label">Nouveau</p>
-                            <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
-                        </div>
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h2 class="card-title">La note enchantée</h2>
-                                <p class="card-subtitle">Charonne</p>
+                        </a>
+                    </article>
+
+                    <article class="restaurants__card">
+                        <a class="no-decoration" href="#">
+                            <div class="card-img-contener">
+                                <p class="new-label">Nouveau</p>
+                                <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
-                            <div class="heart-contener">
-                                <input class="check-heart" id="heart-2" type="checkbox">
-                                <label for="heart-2">
-                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
-                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
-                                </label>
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h2 class="card-title">La note enchantée</h2>
+                                    <p class="card-subtitle">Charonne</p>
+                                </div>
+                                <div class="heart-contener">
+                                    <input class="check-heart" id="heart-2" type="checkbox">
+                                    <label for="heart-2">
+                                        <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                        <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="restaurants__card">
-                    <a class="no-decoration" href="#">
-                        <div class="card-img-contener">
-                            <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
-                        </div>
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h2 class="card-title">À la française</h2>
-                                <p class="card-subtitle">Cité Rouge</p>
+                        </a>
+                    </article>
+
+                    <article class="restaurants__card">
+                        <a class="no-decoration" href="#">
+                            <div class="card-img-contener">
+                                <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
-                            <div class="heart-contener">
-                                <input class="check-heart" id="heart-3" type="checkbox">
-                                <label for="heart-3">
-                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
-                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
-                                </label>
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h2 class="card-title">À la française</h2>
+                                    <p class="card-subtitle">Cité Rouge</p>
+                                </div>
+                                <div class="heart-contener">
+                                    <input class="check-heart" id="heart-3" type="checkbox">
+                                    <label for="heart-3">
+                                        <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                        <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </article>
-                <article class="restaurants__card">
-                    <a class="no-decoration" href="#">
-                        <div class="card-img-contener">
-                            <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
-                        </div>
-                        <div class="card-content">
-                            <div class="card-txt">
-                                <h2 class="card-title">Le délice des sens</h2>
-                                <p class="card-subtitle">Folie-Méricourt</p>
+                        </a>
+                    </article>
+
+                    <article class="restaurants__card">
+                        <a class="no-decoration" href="#">
+                            <div class="card-img-contener">
+                                <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
-                            <div class="heart-contener">
-                                <input class="check-heart" id="heart-4" type="checkbox">
-                                <label for="heart-4">
-                                    <i class="empty-heart fa-xl fa-regular fa-heart"></i>
-                                    <i class="colored-heart fa-xl fa-solid fa-heart"></i>
-                                </label>
+                            <div class="card-content">
+                                <div class="card-txt">
+                                    <h2 class="card-title">Le délice des sens</h2>
+                                    <p class="card-subtitle">Folie-Méricourt</p>
+                                </div>
+                                <div class="heart-contener">
+                                    <input class="check-heart" id="heart-4" type="checkbox">
+                                    <label for="heart-4">
+                                        <i class="empty-heart fa-xl fa-regular fa-heart"></i>
+                                        <i class="colored-heart fa-xl fa-solid fa-heart"></i>
+                                    </label>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                </article>
+                        </a>
+                    </article>
+                    
+                </div>
             </div>
         </section>
     </main>
