Pages de restaurant sans les animations

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <section class="presentation">
             <h1 class="title title--presentation">Réservez le menu qui vous convient</h1>
             <p class="presentation__text">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-            <a class="presentation__button" href="#restaurants"><span class="button-text">Explorer nos restaurants</span></a>
+            <a class="button" href="#restaurants"><span class="button-text">Explorer nos restaurants</span></a>
         </section>
 
         <!-- Section "functioning" -->
@@ -116,7 +116,7 @@
                 <div class="restaurants__contener">
 
                     <article class="restaurants__card">
-                        <a class="no-decoration" href="#">
+                        <a class="no-decoration" href="./restaurants/la-palette-du-gout.html">
                             <div class="card-img-contener">
                                 <p class="new-label">Nouveau</p>
                                 <img class="card-img" src="./assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
@@ -138,7 +138,7 @@
                     </article>
 
                     <article class="restaurants__card">
-                        <a class="no-decoration" href="#">
+                        <a class="no-decoration" href="./restaurants/la-note-enchantee.html">
                             <div class="card-img-contener">
                                 <p class="new-label">Nouveau</p>
                                 <img class="card-img" src="./assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
@@ -160,7 +160,7 @@
                     </article>
 
                     <article class="restaurants__card">
-                        <a class="no-decoration" href="#">
+                        <a class="no-decoration" href="./restaurants/a-la-francaise.html">
                             <div class="card-img-contener">
                                 <img class="card-img" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
@@ -181,7 +181,7 @@
                     </article>
 
                     <article class="restaurants__card">
-                        <a class="no-decoration" href="#">
+                        <a class="no-decoration" href="./restaurants/le-delice-des-sens.html">
                             <div class="card-img-contener">
                                 <img class="card-img" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Photo d'une assiette sur une table de restaurant">
                             </div>
